// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser.ParseMusicDetail (ddrworld/error) 1`] = `
Object {
  "musics": Array [],
  "status": 1,
}
`;

exports[`Parser.ParseMusicDetail (ddrworld/noLogin) 1`] = `
Object {
  "musics": Array [],
  "status": 2,
}
`;

exports[`Parser.ParseMusicDetail (ddrworld/normal) 1`] = `
Object {
  "musics": Array [
    MusicData {
      "difficulty": Array [
        3,
        6,
        8,
        11,
        13,
        6,
        8,
        12,
        13,
      ],
      "isDeleted": 0,
      "musicId": "8bQQ0lP96186D8Ibo8IoOd6o16qioiIo",
      "title": "アルストロメリア (walk with you remix)",
      "type": 0,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseMusicDetail (error) 1`] = `
Object {
  "musics": Array [],
  "status": 1,
}
`;

exports[`Parser.ParseMusicDetail (grade) 1`] = `
Object {
  "musics": Array [
    MusicData {
      "difficulty": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        17,
      ],
      "isDeleted": 0,
      "musicId": "oiqql6iPq8Oq0QIqlqb1DOOO8ioPo8b9",
      "title": "",
      "type": 0,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseMusicDetail (noLogin) 1`] = `
Object {
  "musics": Array [],
  "status": 2,
}
`;

exports[`Parser.ParseMusicDetail (nonstop) 1`] = `
Object {
  "musics": Array [
    MusicData {
      "difficulty": Array [
        4,
        8,
        9,
        11,
        0,
        9,
        13,
        11,
        0,
      ],
      "isDeleted": 0,
      "musicId": "qbbOOO1QibO1861bqQII9lqlPiIoqb98",
      "title": "",
      "type": 0,
    },
  ],
  "status": 0,
}
`;

exports[`Parser.ParseMusicDetail (normal) 1`] = `
Object {
  "musics": Array [
    MusicData {
      "difficulty": Array [
        4,
        7,
        11,
        14,
        0,
        7,
        12,
        15,
        0,
      ],
      "isDeleted": 0,
      "musicId": "06O0ObdQobq86lPDo6P18dQ1QPdilIQO",
      "title": "妖隠し -あやかしかくし-",
      "type": 0,
    },
  ],
  "status": 0,
}
`;
